src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_detect_fill")]
        internal static partial int XImgProcFastLineDetectorDetectFill(IntPtr detector, IntPtr image, float[] lines, int lineCapacity, out int lineCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_draw_segments")]
        internal static partial int XImgProcFastLineDetectorDrawSegments(IntPtr detector, IntPtr image, IntPtr lines, int drawArrow, double colorV0, double colorV1, double colorV2, double colorV3, int lineThickness);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_draw_segments_array")]
        internal static partial int XImgProcFastLineDetectorDrawSegmentsArray(IntPtr detector, IntPtr image, float[] lines, int lineCount, int drawArrow, double colorV0, double colorV1, double colorV2, double colorV3, int lineThickness);
        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_generic")]
        internal static partial int XImgProcDisparityWLSFilterCreateGeneric(int useConfidence, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_bm")]
        internal static partial int XImgProcDisparityWLSFilterCreateFromStereoBM(IntPtr matcherLeft, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_sgbm")]
        internal static partial int XImgProcDisparityWLSFilterCreateFromStereoSGBM(IntPtr matcherLeft, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_matcher")]
        internal static partial int XImgProcDisparityWLSFilterCreateFromStereoMatcher(IntPtr matcherLeft, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_create_right_matcher_from_stereo_bm")]
        internal static partial int XImgProcCreateRightMatcherFromStereoBM(IntPtr matcherLeft, out IntPtr matcherRight);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_create_right_matcher_from_stereo_sgbm")]
        internal static partial int XImgProcCreateRightMatcherFromStereoSGBM(IntPtr matcherLeft, out IntPtr matcherRight);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_create_right_matcher_from_stereo_matcher")]
        internal static partial int XImgProcCreateRightMatcherFromStereoMatcher(IntPtr matcherLeft, out IntPtr matcherRight);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_release_handle")]
        internal static partial void XImgProcDisparityWLSFilterReleaseHandle(IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_filter_filter")]
        internal static partial int XImgProcDisparityFilterFilter(IntPtr filter, IntPtr disparityMapLeft, IntPtr leftView, IntPtr filteredDisparityMap, IntPtr disparityMapRight, ref XImgProcRectNative roi, IntPtr rightView);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_filter")]
        internal static partial int XImgProcDisparityWLSFilterFilter(IntPtr filter, IntPtr disparityMapLeft, IntPtr leftView, IntPtr filteredDisparityMap, IntPtr disparityMapRight, ref XImgProcRectNative roi, IntPtr rightView);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_lambda")]
        internal static partial int XImgProcDisparityWLSFilterGetLambda(IntPtr filter, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_lambda")]
        internal static partial int XImgProcDisparityWLSFilterSetLambda(IntPtr filter, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_sigma_color")]
        internal static partial int XImgProcDisparityWLSFilterGetSigmaColor(IntPtr filter, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_sigma_color")]
        internal static partial int XImgProcDisparityWLSFilterSetSigmaColor(IntPtr filter, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_lrc_thresh")]
        internal static partial int XImgProcDisparityWLSFilterGetLrcThresh(IntPtr filter, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_lrc_thresh")]
        internal static partial int XImgProcDisparityWLSFilterSetLrcThresh(IntPtr filter, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_depth_discontinuity_radius")]
        internal static partial int XImgProcDisparityWLSFilterGetDepthDiscontinuityRadius(IntPtr filter, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_depth_discontinuity_radius")]
        internal static partial int XImgProcDisparityWLSFilterSetDepthDiscontinuityRadius(IntPtr filter, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_confidence_map")]
        internal static partial int XImgProcDisparityWLSFilterGetConfidenceMap(IntPtr filter, IntPtr confidenceMap);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_roi")]
        internal static partial int XImgProcDisparityWLSFilterGetRoi(IntPtr filter, out XImgProcRectNative roi);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_get_disparity_vis")]
        internal static partial int XImgProcGetDisparityVis(IntPtr src, IntPtr dst, double scale);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_compute_mse")]
        internal static partial int XImgProcComputeMSE(IntPtr gt, IntPtr src, ref XImgProcRectNative roi, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_compute_bad_pixel_percent")]
        internal static partial int XImgProcComputeBadPixelPercent(IntPtr gt, IntPtr src, ref XImgProcRectNative roi, int thresh, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_create")]
        internal static partial int XImgProcFastBilateralSolverFilterCreate(IntPtr guide, double sigmaSpatial, double sigmaLuma, double sigmaChroma, double lambda, int numIter, double maxTol, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_release_handle")]
        internal static partial void XImgProcFastBilateralSolverFilterReleaseHandle(IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_filter")]
        internal static partial int XImgProcFastBilateralSolverFilterFilter(IntPtr filter, IntPtr src, IntPtr confidence, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_run")]
        internal static partial int XImgProcFastBilateralSolverFilterRun(IntPtr guide, IntPtr src, IntPtr confidence, IntPtr dst, double sigmaSpatial, double sigmaLuma, double sigmaChroma, double lambda, int numIter, double maxTol);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_create")]
        internal static partial int XImgProcEdgeAwareInterpolatorCreate(out IntPtr interpolator);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_release_handle")]
        internal static partial void XImgProcEdgeAwareInterpolatorReleaseHandle(IntPtr interpolator);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_create")]
        internal static partial int XImgProcRICInterpolatorCreate(out IntPtr interpolator);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_release_handle")]
        internal static partial void XImgProcRICInterpolatorReleaseHandle(IntPtr interpolator);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_sparse_match_interpolator_interpolate")]
        internal static partial int XImgProcSparseMatchInterpolatorInterpolate(IntPtr interpolator, IntPtr fromImage, IntPtr fromPoints, IntPtr toImage, IntPtr toPoints, IntPtr denseFlow);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_interpolate")]
        internal static partial int XImgProcEdgeAwareInterpolatorInterpolate(IntPtr interpolator, IntPtr fromImage, IntPtr fromPoints, IntPtr toImage, IntPtr toPoints, IntPtr denseFlow);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_interpolate")]
        internal static partial int XImgProcRICInterpolatorInterpolate(IntPtr interpolator, IntPtr fromImage, IntPtr fromPoints, IntPtr toImage, IntPtr toPoints, IntPtr denseFlow);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_cost_map")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetCostMap(IntPtr interpolator, IntPtr costMap);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_cost_map")]
        internal static partial int XImgProcRICInterpolatorSetCostMap(IntPtr interpolator, IntPtr costMap);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_k")]
        internal static partial int XImgProcEdgeAwareInterpolatorGetK(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_k")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetK(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_sigma")]
        internal static partial int XImgProcEdgeAwareInterpolatorGetSigma(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_sigma")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetSigma(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_lambda")]
        internal static partial int XImgProcEdgeAwareInterpolatorGetLambda(IntPtr interpolator, out float value);
